kubernetes/apps/default/ganymede/base/database/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ganymede-database-deployment
  labels:
    app: ganymede-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ganymede-database
  template:
    metadata:
      labels:
        app: ganymede-database
    spec:
      containers:
        - name: ganymede-database
          image: postgres:15.1
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: ganymede-database-data-pvc
