kubernetes/apps/default/ganymede/base/database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ganymede-database-service
spec:
  selector:
    app: ganymede-database
  ports:
    - name: ganymede-database-tcp
      port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
